# XTYF_Balance_wheellegbot

./: README.md
install/: local_setup.sh  setup.sh
install/balance_bot/lib/balance_bot/: initial_pose_controller.py
install/balance_bot/share/ament_index/resource_index/package_run_dependencies/: balance_bot
install/balance_bot/share/balance_bot/: local_setup.sh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/balance_bot/share/balance_bot/cmake/: balance_botConfig.cmake
install/balance_bot/share/balance_bot/urdf/: leg_initial_pose_module.xacro  wheel_leg_initial_pose.xacro
log/: latest_build
src/balance_bot/: CMakeLists.txt  LISENCE
src/balance_bot/launch/: control.launch.py
src/balance_bot/src/: initial_pose_controller.py
src/balance_bot/urdf/: bot_with_sensors.xacro
